fix: correct element spacing for footer and info

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -44,5 +44,8 @@
       justify-content: space-between;
       text-align: start;
     }
+    &-contact {
+      margin: 0px 0;
+    }
   }
 }
