--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -47,7 +47,7 @@
     .info-content {
       display: flex;
       flex-direction: row-reverse;
-      margin-bottom: 15px;
+      margin-bottom: 0px;
       img {
         width: 40%;
       }
